syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.urlshortner.grpc";
option java_outer_classname = "UrlShortnerProto";

package urlshortner;

service UrlShortenerService {
  rpc ShortenUrl(ShortenUrlRequest) returns (ShortenUrlResponse);
  rpc GetOriginalUrl(GetOriginalUrlRequest) returns (GetOriginalUrlResponse);
  rpc GetUrlStats(GetUrlStatsRequest) returns (GetUrlStatsResponse);
  rpc DeleteUrl(DeleteUrlRequest) returns (DeleteUrlResponse);
}

message ShortenUrlRequest {
  string original_url = 1;
  string custom_code = 2;
  int64 expiration_seconds = 3;
}

message ShortenUrlResponse {
  bool success = 1;
  string message = 2;
  string short_code = 3;
  string short_url = 4;
  string original_url = 5;
}

message GetOriginalUrlRequest {
  string short_code = 1;
}

message GetOriginalUrlResponse {
  bool success = 1;
  string message = 2;
  string original_url = 3;
  bool found = 4;
}

message GetUrlStatsRequest {
  string short_code = 1;
}

message GetUrlStatsResponse {
  bool success = 1;
  string message = 2;
  string original_url = 3;
  string short_code = 4;
  int64 click_count = 5;
  int64 created_at = 6;
  int64 expires_at = 7;
}

message DeleteUrlRequest {
  string short_code = 1;
}

message DeleteUrlResponse {
  bool success = 1;
  string message = 2;
}



